--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Work Space | Найди работу своей мечты</title>
+  <!-- Fonts -->
   <link rel="preload" href="./fonts/inter-regular.woff2" as="font" type="font/woff2" crossorigin>
+  <!-- Fonts -->
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="./img/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./img/favicons/favicon-32x32.png">
@@ -26,7 +28,10 @@
   <header class="header">
     <div class="container header__container">
       <img class="header__logo" src="./img/logo.svg" alt="Логотип сайта Work Space" width="137" height="24">
-      <a class="header__link btn" href="#vacancies">Посмотреть вакансии</a>
+      <div class="header__links">
+        <a class="header__link btn" href="#vacancies">Посмотреть вакансии</a>
+        <a class="header__link header__link_o" href="./employer.html">+ Добавить новую вакансию</a>
+      </div>
     </div>
   </header>
 
