--- a/employer.html
+++ b/employer.html
@@ -17,7 +17,11 @@
   <meta name="msapplication-config" content="./img/favicons/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
   <!-- Favicons -->
+
+  <link href="./css/dropzone_5.9.3.min.css" rel="stylesheet">
   <link href="./css/style.css" rel="stylesheet">
+
+  <script src="./js/dropzone_5.9.3.min.js" defer></script>
   <script src="./js/just-validate.4.2.0.min.js" defer></script>
   <script src="./js/script.js" defer></script>
 </head>
